Add: Permission Check & Bug fixes
- Added a new permission check for the .use permission in both commands

- The displayed text in the hoverevent can be customized now in the config file
- The description for the command is now more detailed
- Formatting modified

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,7 +11,7 @@ commands:
       permission-message: You don't have the permission <permission>
    redseedinfo:
       aliases: [seed]
-      description: Command description.
+      description: This command provides more information about the Minecraft world in addition to the world seed.
       usage: /<command>
       permission: rwm.redseedinfo.use
       permission-message: You don't have the permission <permission>
