--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,6 +24,7 @@ lang:
   wrong-seed-syntax: "&8[&2Welt&fInfo&8]&f: Schreibe: &7/seed"
   no-world-seed: "&8[&2Welt&fInfo&8]&f: &7Für diese Welt sind &ckeine Welt-Informationen bekannt&7."
   seed-info: "&8[&2Welt&fInfo&8]&f: &7Du befindest dich in"
+  copy-seed-info: "&2Seed kopieren"
 
 # Einstellung zur Anzeige bei ausführung des /seed commands
 worlds:
